--- a/css/bottega52.css
+++ b/css/bottega52.css
@@ -436,8 +436,25 @@ body {
 }
 
 .portfolio-modal .modal-content h2 {
-    margin: 0;
-    font-size: 3em;
+    display: block;
+    font-size: 1.5em;
+    -webkit-margin-before: 0.83em;
+    -webkit-margin-after: 0.83em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    font-weight: bold;
+    color: rgba(0,0,0,1);
+}
+
+.portfolio-modal .modal-content p {
+    display: block;
+    font-size: 1.5em;
+    -webkit-margin-before: 0.83em;
+    -webkit-margin-after: 0.83em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    font-weight: bold;
+    color: rgba(50,50,50,0.8);
 }
 
 .portfolio-modal .modal-content img {
